# autorally

./: README.md  usb rules.txt
autorally_control/launch/: path_integral_nn.launch
autorally_control/src/path_integral/: path_integral_main.cu
autorally_control/src/path_integral/scripts/: curate_data.py  (+1 more)
autorally_core/: CMakeLists.txt  nodelet_plugins.xml
autorally_core/launch/: autorally.launch  autorally_rtabmap.launch  autorally_sim.launch  autorally_visual_mapping.launch  baseStation.launch  camera_auto_balance.launch  camera_trigger.launch  camera_ximea.launch  gpsReachBase.launch  gpsReachRover.launch  hardware.machine  robot_stereo.urdf  stateEstimator.launch
autorally_core/src/CameraAutoBalance/: CMakeLists.txt  CameraAutoBalanceXIMEA.cpp  XimeaAdjuster.cpp  XimeaAdjuster.h
autorally_core/src/StateEstimator/: CMakeLists.txt
autorally_core/src/arduino/: CMakeLists.txt
autorally_core/src/camera_trigger/: CMakeLists.txt  CameraTrigger.cpp  CameraTrigger.h
autorally_core/src/camera_trigger/camera_trigger/: camera_trigger.ino
autorally_core/src/gps/: CMakeLists.txt  GPSReach.cpp  GPSReach.h
autorally_description/urdf/: autoRallyPlatform.urdf.xacro
autorally_gazebo/: package.xml
autorally_gazebo/launch/: autoRallyRTABMapGazeboSim.launch  autoRallyStatePublisher.launch  autoRallyTrackGazeboSim.launch
autorally_gazebo/nodes/: autorally_controller.py
autorally_msgs/: package.xml
autorally_util/: 99-autoRally.rules  chronyClient.conf  chronyServer.conf  package.xml  setupEnvAlpha.sh  setupEnvLocal.sh  setupEnvRemote.sh  setupEnvVariables.sh
(+1 files in other folders)
